# ml-sagemaker-cadaver

./: Dockerfile  Makefile  README.md  pyproject.toml
sagemaker-estimator/: predictor.py  train
src/python/: check_bias.py  check_quality.py  custom_evaluation.py  custom_ingestion.py  custom_preprocessing.py  deploy_endpoint.py  evaluate.py  ingestion.py  preprocess.py  register.py  remove_endpoint.py  run_pipeline.py  test_endpoint.py  train.py  transform.py
src/python/framework/ops/: base.py  pipeline.py  steps.py
