[tool.poetry]
name = "experimental-sm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pyspark = "^3.2.1"
setuptools = "^60.8.1"
Flask = "^2.0.2"
gevent = "^23.9.0"
numpy = "^1.22.2"
pandas = "^1.4.0"
scipy = "1.8.0"
scikit-learn = "1.0.2"
pyarrow = "^14.0.1"
s3fs = "^2022.1.0"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
mypy = ">=0.812"
flake8 = "^3.9.0"
flakehell = "^0.9.0"
black = ">=20.8b1"
boto3 = "^1.18.1"
sagemaker = "^2.73.0"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.py?$'
skip-string-normalization = true

[tool.flakehell]
format = "colored"
show_source = true
max_line_length = 160
max_complexity = 10
extended_default_ignore = [
    "D203",
    "W503",
    "W605"
]

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-black = ["+*"]
flake8-broken-line = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pyflakes = ["+*"]
pycodestyle = ["+*"]
pylint = ["+*"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
